--- a/201509.md
+++ b/201509.md
@@ -112,6 +112,11 @@
 店内では勢いのあるメニューを食べながら，最近の話をしたりする．
 隣の女性二人が，そのまた隣の男性二人組に「何を飲んでるんですか」と話しかけられているのを横目で見る．
 
+トムデマルコとティモシーリスターの『熊とワルツを』という本についてや，
+一年でどれだけ論文を読むかとか英語についてとか話した．
+やたら EDM が流れてくる店で，MCMCの動画の曲とか流れてた．
+
+
 もう一軒行こうという話になり，
 [HUB 恵比寿店](http://tabelog.com/tokyo/A1303/A130302/13035492/)に行く．
 HUB のポイントが切れそうだったので使っておこうと思って．
