--- a/201510.md
+++ b/201510.md
@@ -44,6 +44,114 @@ Wikipedia を見ると1Fと3Fだそうだ．1Fしか巡らなかった......
 半日もいろいろと付き合っていただき，本当にありがとうございました！
 
 
+## 1024
+土曜日．
+お会いしようと思っていた方とは残念ながら都合がつかず．
+と言いながらも2日前のDくんとの話でサンフランシスコ市内に興味が出てきたので，
+1人で行ってみることに．
+
+
+チェックアウトは確か12時だったが，
+10時頃にルームサービスの人に起こされて，
+慌てて整理をしてチェックアウト．
+空港までのシャトルバスがあり，それに乗れるか?と聞いてみたところ，
+いけるとの返答．
+他の空港までの乗客は，スポーツ選手か何かだろうか．
+
+
+SFOの国際線ターミナル，入って左側(北側: Gate G側)に手荷物を預けることができる [Airport Travel Services](http://www.airporttravelagency.org/) というところがあるので，
+そこでキャリーケースを預ける．$35．
+空港内のスターバックスで遅めの朝食．
+
+bartに乗って，Embarcadero駅まで行く．
+ここから湾岸を沿って，フィッシャーマンズワーフ，そしてゴールデンゲートブリッジまで歩く．
+3時間くらいかかった気がする．
+
+Pier 39 というように桟橋に番号がついている．
+順番になっているのかと思いきやどうもそんなことはない?
+Pier 7 の木の桟橋を歩いたりする．
+途中，おしゃれなレストランやExploratiumという科学館，大きな船などが見える．
+Exploratiumはおすすめされていたので行きたかったけれど，
+それよりもゴールデンゲートブリッジに行ってみたかったので，また今度．
+
+途中，公園のようなところがあったり，ケーブルカーやかなり急な坂を眺めてふと，
+「そうか！ここはNHK教育テレビで夕方やっていたドラマ『フルハウス』の舞台だ」と気づく．
+地図で見ると平坦のように感じてしまうのだけれど，実際は急な坂がたくさんあるようで．
+なんで平坦のように感じるかというと，京都や奈良の碁盤の目の街はそこまで急な坂がないので，
+その記憶がじゃまをするのだろう．
+
+
+途中からは海岸沿いの整備された道を歩く．
+ほとんど日本人はいないみたいだけれど，少しだけ見かける．
+砂浜に降りてみたりする．目の前にゴールデンゲートブリッジがあり圧巻．
+天気も良くてとても気持ちが良かった．
+子どもたちがサッカーをしていて，日本にも似たような光景はあるななんて思ったり．
+
+古めのPierで男性旅行客に話しかけられる．
+こっちから「撮ってあげましょうか」というのは，気が引けるけれど，
+結構，写真撮影をお願いされることが多かった気がする．
+初めてのUSですというと，歓迎されてしまった．
+
+ふもとからちょっとした登山道みたいなところ登り，橋の近くまで．
+自殺者が多いから対策をしているとどこかで観たけれど，
+簡単に飛び越えられる気がするし，結構怖かった．
+これは自由を大切にする国だからだろうか．
+
+ここまで来たらと思い対岸まで歩く．
+ビスタポイントという駐車場のようなところ．
+自動販売機も商店もなくて，Uberも呼べなさそうな雰囲気出し，引き返すしかないと思い歩く．
+道を挟んで逆側は少し丘のようになっていて，
+たぶんここが映画 “The Internship”で夜遊びの後に訪れたシーンのところだろうなと思う．
+GoogleのあるMountain Viewでインターンシップをして，
+その後サンフランシスコ市内で遊ぶだけでも遠い気がするのに，対岸のここまで来るか?という気になる．
+(関西だと梅田が会社で，京都のクラブで遊んだ後，嵐山で朝を迎える感じだろうか?)
+
+帰りもまた対岸まで歩く．対岸に渡ったところにも休憩所があって，おみやげを売ってたり，cafeがあった．
+ここで食べ物とコーラを買って食べた．
+
+市内行きのバスに乗るためにうろうろする．
+ヨーロッパ人のカップル観光客からバス停はどこだと聞かれるも，
+「私も知らない，多分ここで合ってる」と答える．
+こちらではほとんど見なかったのだけれど，
+女性がストッキングを履いていたため，印象に残ったのだった．
+
+バスに乗りダウンタウンに移動．すでに夕方そろそろ日が暮れる時間．
+モスコーンセンターでは次の日からJava One・Oracle OpenWorldだったらしく，
+会場の準備をする人たちがたくさんいた．
+
+
+近くの Peet's Coffee & Tea で休憩をする．
+最後にTwitterの様子でも見に行くかと思い，大通りを歩く．
+海岸とは逆方向で30分くらい歩いただろうか．
+最初は安全な雰囲気だったけれど，奥に行けば行くほど日が暮れたこともありちょっと怖い．
+土曜日でオフィスはしまっていたけれど，
+ある窓には美少女戦士セーラームーンのポスターが何故か掲示されていた．
+
+
+bartに乗り空港へ．
+サンフランシスコ国際空港(SFO)でチェックインをした後に荷物を預けて，空港を探検する．
+検査前のイートインスペースに「王将」という文字があったので，
+餃子かな?と思いきや，単なる日本料理屋だった．
+[Willow Street Woodfired Pizza](http://www.yelp.com/biz/willow-street-woodfired-pizza-san-francisco-2)でピザを食べた．
+
+美術館のようなところにはPAN AMの遺産みたいなものがあったりして，面白い光景だった．
+時間はあったけれど早めに保安検査を受けることにした．
+私の後ろに並んでいたのは，大学バレーボール部の女性たちで楽しそうで少しだけ話をしたりした．
+保安検査では職員を爆笑させることに成功したり，
+抜き取られて手に付箋のような紙を擦り付けられて薬物検査?をされたりした．
+
+SFOは保安検査後のほうが充実していて面白かった．
+InternationalよりもDomesticのほうがしっかりしていて探検のしがいがあった．
+流石サンフランシスコということで見かける広告のほとんどがIT関係で，
+少しだけコンサルタントの会社という感じだった．
+
+ここからユナイテッドの国内線で，ピッツバーグまでの直行便で移動．
+面白かったのは[ユナイテッドの機内安全ビデオ](https://www.youtube.com/watch?v=WqAAQ0ZZMyw)で，
+見応えがあってよかった．
+夜の10時に出て，朝の6時着だが，時差もあるので5時間くらいだったそうだ．
+ただ，気持ちとしては3時間くらいしか乗ってない気がして，全く寝れなかった．
+
+
 ## 1023
 午前中は [Computer History Museum](http://www.computerhistory.org/) に行く．
 Caltrain で移動し，Mountain View 駅まで行く．
