--- a/201510.md
+++ b/201510.md
@@ -1,4 +1,109 @@
 # 201510
+## 1031
+機中泊．
+それぞれ現地時間では夕方に出て，夜に着くのだけれど，
+日付変更線を超えるので1日加算されているし，
+13時間くらいかかる．
+
+機内食を戴いて睡眠．
+ただ寝過ぎると夜寝れなくなりそうだったので，適当な時間に起きて，映画を見ることに．
+
+『[マッドマックス 怒りのデス・ロード](https://ja.wikipedia.org/wiki/%E3%83%9E%E3%83%83%E3%83%89%E3%83%9E%E3%83%83%E3%82%AF%E3%82%B9_%E6%80%92%E3%82%8A%E3%81%AE%E3%83%87%E3%82%B9%E3%83%BB%E3%83%AD%E3%83%BC%E3%83%89)』をヒヤヒヤしながら観て，
+“[Aloha](http://www.imdb.com/title/tt1243974/)”を観た．
+
+マッドマックスはいろんな人の評判が良かったので期待していたけれど，
+私はあまりおもしろいと感じなかった．
+とにかく映像に勢いがあってパチンコのようだなという感想を持った．
+
+それではと思いラブストーリーでも観るかという気になって，Alohaという映画を観る．
+しかし，ストーリーが微妙でいろいろ調べてみると，あまり評判の良い映画ではなかったみたい．
+吹き替え版だった気がするけれど，それもよくなかったのだろうか．
+ヒロインがEmma Stoneでやたら可愛かったのと，
+彼女の役名の Ng という名前についての話があったのが，気にかかった．
+
+サンフランシスコの思い出でも思い出すかという気になって，
+『フルハウス』の第一話を観た後に(オープニングでは，SFの有名スポットがたくさん使われていた)，
+水曜どうでしょうのマレーシアジャングル探検を観たところで日本についた．
+
+
+@uploadくんを成田まで呼び寄せていたので，彼の車で移動．
+到着の時間を少し遅めに伝えたことで混乱があったが，なんとかなった．
+松戸にある[雷 本店](http://tabelog.com/chiba/A1203/A120302/12020862/)に行き，
+中盛を注文．あまり並ばずに済んだ．
+こってりというよりも「濃いスープ」という感じ．非常に好み．
+二郎系のラーメンは最後は後悔が多いのだけれど，
+ここのは味もよく量も適切で体験としてはかなり良い方にわけられると思う．
+
+ラーメンを食べる前後でアメリカでの出来事を話せることから，一気に話す．
+
+夜の首都高には初めて乗るのだけれど，最高だった．
+自宅まで送ってもらって，車代などを合わせたら高くついてしまったけれど，
+それでもアメリカの眠れない夜にずっとラーメンが食べたいと思っていたので，
+その味は格別だった．
+
+
+## 1030
+最終日．
+Keynoteだけ聴いて帰るかと思っていたが，
+起きたらチェックアウト予定の30分前で，あわや出国失敗するところだった．
+慌てて荷物をまとめてチェックアウトをし，SuperShuttleに乗る．
+(KeynoteはYoutubeに挙がっていたので，良かった)
+
+
+ピッツバーグ国際空港(PIT)はあまり大きくなかったけれど，
+少し時間があったので，またもや探検．
+いろいろと気が沈んでいたので，TGIFridaysでステーキとクラフトビールを頼む．
+[IPA](https://lagunitas.com/beers/ipa)が飲みたかったので，つい．
+シカゴに工場があるらしい．
+
+シカゴ・オヘア国際空港(ORD)に移動．ここは中部時間．
+こちらに行くのもユナイテッドだったけれど，こじんまりとした飛行機だった．
+搭乗まで2時間あったので，ターミナル1から3までを端から端まで移動．
+ユナイテッドの出発ターミナルの Terminal 1 が一番綺麗だった気がする．
+
+自分へのおみやげ(絵本)を購入．
+服や酒などある特定のものに異常に執着があるならともかく，
+そうではないので，「そこでしか買えない」買いたいものはないなと思ったりする．
+絵本もAmazonで買えるわけで．
+
+ANAのゲートだけは日本語が流れていて，周りは日本人だらけで不思議な雰囲気だった．
+ということで，搭乗．夕方の4時ぐらいに出発．
+9日間の滞在はここで終わる．
+
+
+## 1029
+8時30分からSPLASHのKeynote．Dartの話．
+
+OOPSLAの “Compilation and Tools” のセッションを聴講．
+
+やっぱり眠くて昼過ぎに寝に帰ったら，聞きたいTutorialを聞き逃す．
+OOPSLAの “Static Analysis” に参加．
+
+Conference Banquetは，Carnegie Museum of Natural Historyが会場．
+行きのバスではLAでエンジニアをやってる人と隣になり話す．
+
+いくつかの人と会話して，情報を教えてもらった後に，やっと日本人の方と話す．
+「飯もいいけど，夜8時まで会場が開いてるから見てくれ」とアナウンス．
+
+そもそもこの日は午後から入場無料だったらしく，しかも木曜日は8時までやっている．
+Carnegie Museum of Artも併設されていて，
+こちらの現代美術のフロアを一人で巡り，大満足．
+学芸員?警備員?の人に写真を撮っても良いかと聞き，撮る．
+日本では写真が許可されてるところが多くないので，ここぞとばかりに有名作品を撮る．
+
+
+## 1028
+もう時差ボケでぐちゃぐちゃになってしまった．
+昼過ぎにあわてて起きて，聞けるセッションを聞く．
+
+夜はポスターセッションとディナーということで，
+何人か日本人がいることを確認．
+面白そうなものもいくつかあったけれど，
+なんというか趣味が悪い気もする．
+
+
+3杯くらいビールを飲んで寝た．
+
 ## 1027
 9時ぐらいに起床．
 昨日の夜のうちに連絡を取っていた CMU の方とお会いしていただけることになる．
@@ -42,6 +147,32 @@ Wikipedia を見ると1Fと3Fだそうだ．1Fしか巡らなかった......
 
 突然の連絡にもかかわらず，
 半日もいろいろと付き合っていただき，本当にありがとうございました！
+
+
+## 1026
+SPLASH 2015 1日目．
+[Smart Software Strategies 2015](http://2015.splashcon.org/track/SmartSoftwareStrategies2015)に参加．
+
+昼食は会場近くの[Bar Louie](http://www.yelp.com/biz/bar-louie-pittsburgh-5)でハンバーガーを食べる．
+
+夜は疲れてしまって，何も食べずに寝る．
+確か，Welcome Receptionがあった気がするが無視．
+
+
+## 1025
+ピッツバーグ国際空港着．
+到着するまで太平洋時間から東部標準時間，3時間時差があることを忘れていた．
+
+非常に眠いが，日本で出国前に予約していた SuperShuttle のカウンターまで行く．
+他には同じ便に乗っていた男性が2人いて，
+一人はコンピュータサイエンスの学生とか言ってて，
+もう一人はしっかりした感じの黒人のビジネスマンの人だった．
+ピッツバーグの歴史について話を聞いたりした．
+
+マラソン大会があったからか道路が封鎖されていて，途中下道を通らないといけなかったりした．
+ホテルに到着したのは8時くらいだったが，早めにチェックインさせてくれと言い，
+そのまま一日中眠り続けた．
+(この辺から調子が悪くなる)
 
 
 ## 1024
